--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table>
         <tr>
             <td>
-            <img src="images/Circle Image.png" alt="Profile picture" width="170" height="180">
+            <img src="Images\CircleImage.png" alt="Profile picture" width="170" height="180">
             </td>
         
             <td>
