--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <table >
         <tr>
             <td>
-                  <img src="imagesCircleImage.png"  width="200" height="200"> 
+                  <img src="images/CircleImage.PNG"  width="200" height="200"> 
              
             </td>
         
