--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="icon" type="image/x-icon" href="images/chrome.png">
+    <link rel="icon" type="image/x-icon" href="Images\chrome.png">
     
     <title>Personal Information</title>
     <style>
