--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="icon" type="image/x-icon" href="Images\chrome.png">
+    <link rel="icon" type="image/x-icon" href="images/chrome.png">
     
     <title>Personal Information</title>
     <style>
@@ -18,7 +18,7 @@
     
     /* img{
         border-radius: 50%;
-    } */
+    } */    
     ul.a{
         list-style-type: square;
     }
