--- a/Education.html
+++ b/Education.html
@@ -40,6 +40,8 @@
         <a href="Contact-Me.html">Contact Me</a>
         <a href="Gallery.html">Photo Gallery</a>
         <a href="Digital-Business-Card.html" target="_blank">Digital-Card</a>
+        <a href="https://github.com/Elnur1111" target="_blank">GitHub Account</a>
+        <a href="https://elnur1111.github.io/Elnur.web/" target="_blank">GitHub Page</a>
         
 
     </div>
