--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -90,6 +90,12 @@
         
 
     </div>
+    
+<p>
+    You can <a href="mailto: ealiyev13171@email.com">Email</a>  me or reach out to me on <a href="https://www.instagram.com/ealiev.11/" target="_blank">Instagram,</a> 
+    <a href="https://www.facebook.com/profile.php?id=100025442851452">Facebook,</a> or
+    <a href="https://github.com/Elnur1111">Github</a> 
+     </p>
 
     <h2>Contact Information &#128712;</h2>
     <ul>
