--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -108,7 +108,7 @@
     <hr class="new1">
 
 <h3>Your Information: </h3>
-    <form action="mailto:ealiyev13171@ada.edu.az" enctype="text/plain">
+    <form action="mailto:ealiyev13171@ada.edu.az" method="post" enctype="text/plain">
 
         <label for="Name">Name:</label> <br>
         <input type="text" name="Name" placeholder="Username"> <br>
