--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         
         <a href="https://github.com/Elnur1111" target="_blank">GitHub Account</a>
         <a href="https://elnur1111.github.io/Elnur.web/" target="_blank">GitHub Page</a>
+        <a href="weather.html" target="_blank">Weather App</a>
         
 
     </div>
