--- a/Digital-Business-Card.html
+++ b/Digital-Business-Card.html
@@ -20,6 +20,7 @@
   </style>
 
 </head>
+
 <body>
     
   
@@ -74,6 +75,7 @@
            <td> <a href="https://www.facebook.com/profile.php?id=100025442851452" class="fa fa-brands fa-facebook" ></a> </td>
             <td><a href="https://github.com/Elnur1111" class="fa fa-brands fa-github"></a></td>
           </tr> </table>
+          <!-- I would usually put multipe divs inside here set to flex. Some people might use Ul li. Multiple Solutions -->
         </div>
       </a>
     </div>
