--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                 </div>
                 <div class="home-img padd-15">
-                    <img src="images/Personal Photo.jpeg" alt="">
+                    <img src="Images/Personal Photo.jpeg" alt="">
                 </div>
             </div>
         </div>
