--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
 
             <li><a href="Digital-Business-Card.html" target="_blank"><i class="fa-regular fa-address-card"></i>Digital-Card</a></li>
 
+            <li> <a href="weather.html" target="_blank"><i class="fa-solid fa-cloud"></i>          </i>Weather App</a></li>
+
             <li><a href="https://github.com/Elnur1111" target="_blank"><i class="fa-brands fa-github" ></i>GitHub Account</a></li>
 
             <li> <a href="https://elnur1111.github.io/Elnur.web/" target="_blank"><i class="fa-brands fa-github-square">            </i>GitHub Page</a></li>
+
 
             
         </ul>
